# swiss_uid

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  uid.rs  utils.rs
src/utils/: nibble.rs
tests/: test_uid.rs
