[package]
name = "swiss_uid"
version = "1.0.2"
edition = "2021"
resolver = "2"
authors = ["Peter <qbasic16@gmail.com>"]
license = "MIT"
categories = ["finance"]
description = "A Rust implementation of the Swiss UID number based on the Swiss E-Government Standard eCH-0098:2021"
keywords = ["swiss", "uid", "ustid", "mwst", "mehrwertsteuer"]
readme = "README.md"
repository = "https://github.com/qbasic16/swiss_uid/"
homepage = "https://github.com/qbasic16/swiss_uid/"
include = ["/src/**", "/tests/**"]

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
itertools = "0.13.*"
rand = { version = "0.8.*", optional = true }
